# xpn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: xpn_ckpt.md  xpn_proxy.md
libs/: .gitmodules
libs/lz4/: CMakeLists.txt
scripts/: dev-build.sh
scripts/compile/platform/: c3-dario-dmtcp.sh  c3-dario.sh  unito-dario.sh
scripts/compile/software/: xpn.sh
scripts/execute/: xpn.sh
src/base_cpp/: allocator.cpp  allocator.hpp  args.hpp  debug.cpp  debug.hpp  filesystem.hpp  fixed_function.hpp  fixed_ostream.hpp  fixed_string.hpp  fixed_task_queue.hpp  grow_fixed_allocator.hpp  grow_fixed_string.hpp  grow_fixed_vector.hpp  profiler.cpp  profiler.hpp  proxy.hpp  queue_pool.hpp  socket.cpp  socket.hpp  stat_tracker.hpp  str_unordered_map.hpp  subprocess.hpp  task_result.hpp  workers.hpp  workers_on_demand.cpp  workers_on_demand.hpp  workers_pool.cpp  workers_pool.hpp  workers_sequential.cpp  workers_sequential.hpp  xpn_conf.cpp  xpn_conf.hpp  xpn_env.hpp  xpn_parser.cpp  xpn_parser.hpp  xpn_path.cpp
src/bypass/: CMakeLists.txt  Makefile.in  bypass_alloc_debug.cpp  ckpt_time_dmtcp.cpp  lfi_bypass.cpp  xpn_bypass.cpp  xpn_bypass_debug.cpp  xpn_bypass_dmtcp.cpp  xpn_dmtcp.cpp  xpn_dmtcp.hpp
src/connector_fuse/: CMakeLists.txt  fuse-xpn.cpp
src/utils/: CMakeLists.txt  sparse_map.cpp  xpn_ckpt  xpn_expand.cpp  xpn_flush.cpp  xpn_preload.cpp  xpn_server_flush.cpp  xpn_server_monitor.cpp  xpn_server_preload.cpp  xpn_server_stats.cpp  xpn_shrink.cpp
src/xpn_client/: CMakeLists.txt  xpn.h  xpn_unistd.cpp
src/xpn_client/nfi/: CMakeLists.txt  nfi_server.cpp  nfi_server.hpp  nfi_xpn_server_comm.cpp  nfi_xpn_server_comm.hpp
src/xpn_client/nfi/nfi_fabric_server/: nfi_fabric_server_comm.cpp  nfi_fabric_server_comm.hpp
src/xpn_client/nfi/nfi_local/: nfi_local.cpp  nfi_local.hpp
src/xpn_client/nfi/nfi_mpi_server/: nfi_mpi_server_comm.cpp  nfi_mpi_server_comm.hpp
src/xpn_client/nfi/nfi_sck_server/: nfi_sck_server_comm.cpp  nfi_sck_server_comm.hpp
src/xpn_client/nfi/nfi_xpn_server/: adaptative_compressor.cpp  adaptative_compressor.hpp  nfi_xpn_server.cpp  nfi_xpn_server.hpp
src/xpn_client/xpn/: CMakeLists.txt  xpn_api.hpp  xpn_file.hpp  xpn_file_table.hpp  xpn_metadata.hpp  xpn_partition.hpp  xpn_rw.hpp  xpn_stats.hpp
src/xpn_client/xpn/utils/: xpn_file.cpp  xpn_file_table.cpp  xpn_metadata.cpp  xpn_partition.cpp  xpn_rw.cpp
src/xpn_client/xpn/xpn_api/: xpn_api_cwd.cpp  xpn_api_dir.cpp  xpn_api_f_file.cpp  xpn_api_file.cpp  xpn_api_metadata.cpp  xpn_api_rw.cpp  xpn_api_stat.cpp  xpn_api_xpn.cpp
src/xpn_client/xpn/xpn_simple/policy/: xpn_policy_rw.c
src/xpn_controller/: xpn_controller.cpp  xpn_controller.hpp  xpn_controller_ops.cpp  xpn_controller_recv.cpp  xpn_controller_send.cpp
src/xpn_filesystem/: CMakeLists.txt  xpn_filesystem.cpp  xpn_filesystem.hpp  xpn_filesystem_disk.cpp  xpn_filesystem_disk.hpp  xpn_filesystem_xpn.cpp  xpn_filesystem_xpn.hpp  xpn_server_db.cpp  xpn_server_db.hpp
src/xpn_server/: CMakeLists.txt  xpn_server.cpp  xpn_server.hpp  xpn_server_checkpoint.cpp  xpn_server_comm.hpp  xpn_server_flush_preload.cpp  xpn_server_ops.cpp  xpn_server_ops.hpp  xpn_server_params.cpp  xpn_server_params.hpp
src/xpn_server/fabric_server/: fabric_server_comm.cpp  fabric_server_comm.hpp
src/xpn_server/filesystem/: xpn_server_filesystem.cpp  xpn_server_filesystem.hpp  xpn_server_filesystem_disk.cpp  xpn_server_filesystem_disk.hpp  xpn_server_filesystem_lz4.cpp  xpn_server_filesystem_lz4.hpp  xpn_server_filesystem_memory.cpp  xpn_server_filesystem_memory.hpp  xpn_server_filesystem_xpn.cpp  xpn_server_filesystem_xpn.hpp
src/xpn_server/mpi_server/: mpi_server_comm.cpp  mpi_server_comm.hpp
src/xpn_server/sck_server/: sck_server_comm.cpp  sck_server_comm.hpp
src/xpn_server_co/: CMakeLists.txt  FindLibUring.cmake  xpn_server_co.cpp  xpn_server_co.hpp  xpn_server_co_comm.cpp  xpn_server_co_comm.hpp  xpn_server_co_ops.cpp
src/xpn_server_co/coroutine/: xpn_coroutine.hpp  xpn_filesystem_co.hpp  xpn_socket_co.hpp
test/: CMakeLists.txt
test/disk/: CMakeLists.txt  test-performance-disk-interval.c  test-performance-disk-mpi.c  test-performance-disk.c
test/integrity/bypass_c/: CMakeLists.txt  readdir.cpp
test/integrity/rocksdb/: CMakeLists.txt  rocksdb_simple_example.cpp
test/integrity/xpn_init_sleep_destroy/: CMakeLists.txt  xpn_init_sleep_destroy.cpp
test/integrity/xpn_metadata/: print_blocks.cpp
test/performance/xpn/: CMakeLists.txt  mpi-open-w-r-close.cpp
test/regresion/: fwrite-fread.cpp  init-destroy.cpp  setup.hpp  write-read.cpp
